# v6.chriskrycho.com

./: .editorconfig  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  render.yaml  rust-toolchain.toml
.github/workflows/: CI and CD.yml  CI.yml
.nova/: Configuration.json
.zed/: settings.json
_scripts/: build.sh
lx/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
lx/.cargo/: config.toml
lx/.zed/: settings.json
lx/crates/json-feed/: Cargo.toml
lx/crates/json-feed/src/: lib.rs  v1_1.rs
lx/crates/markdown/: Cargo.toml  README.md
lx/crates/markdown/src/: first_pass.rs  lib.rs  second_pass.rs
lx/crates/page-image/: Cargo.toml
lx/crates/page-image/src/: lib.rs  main.rs
lx/schema/: book.schema.json  item.schema.json
lx/src/: archive.rs  build.rs  build.rs.jjconflict  canonicalized.rs  cli.rs  collection.rs  config.rs  error.rs  errors.rs  feed.rs  initializer.rs  lib.rs  main.rs  md.rs  page.rs  sass.rs  server.rs  templates.rs
lx/src/config/: email.rs  mod.rs
lx/src/data/: config.rs  email.rs  image.rs  mod.rs
lx/src/data/item/: cascade.rs  mod.rs  serial.rs
lx/src/markdown/: alt.rs  first_pass.rs  mod.rs  second_pass.rs
lx/src/md/: mdast_ext.rs  mod.rs
lx/src/metadata/: cascade.rs  mod.rs  serial.rs
lx/src/page/: components.rs  metadata.rs
lx/src/page/metadata/: serial.rs
lx/src/templates/: filters.rs  functions.rs  mod.rs  rendering.rs
lx/tests/minimal/_data/: config.json5
lx/tests/minimal/content/: cli-filtering.md
lx/tests/sympolymathesy/_ui/: base.tera
lx/tests/sympolymathesy/content/elsewhere/: Humans of Open Source.md
lx/tests/sympolymathesy/content/journal/2019/: 25,462 Words.md  Adieu to 2019.md  Decaffeinating.md  Endings and Edges.md  JSON Feed Apology and Explanation.md  On Remembering Scripture.md  Some Thoughts on micro.blog.md  Travel is my Kryptonite.md  and Running is Sunlight.md  relaunch.md  twitter-bots-and-decline.md
lx/tests/sympolymathesy/content/journal/2020/: Async Data and Autotracking in Ember Octane.md  Autotracking Elegant DX Via Cutting-Edge CS.md  Building the Slow Way.md  Can You Recommend a Book on This.md  Data Constructors Part 1 Understanding by Implementing.md  Data Constructors Part 2 Better TypeScript.md  Decadal Kind of Change.md  Ember Octane is a New Mental Model.md  Epistemic Status.md  Follow-Up on Command-Line Finding and Filtering.md  How I Publish This Site.md  Initializing Class Fields in Ember Octane.md  Making Illegal States Unrepresentable in TS.md  Migrating Off of PromiseProxyMixin in Ember Octane.md  Notes on Thoughtbots Stop Using Any.md  On Saints.md  Please Dont Just Screenshot Books.md  Presence.md  Private Chat and DMs Are Good Actually.md  Reluctantly Returning to Social Media.md  Scripting Affiliate Links With Alfred.md  Superscript and Subscript Line Heights.md  Ulysses Publishing With WordPress on Linode.md  Waiting for Communion.md  Writing Robust TypeScript Libraries.md  find grep xargs newlines null.md  mut and set and auto-tracking in Ember Octane.md
lx/tests/sympolymathesy/content/journal/2020/crew-dragon-fanfare/: day-1.md  day-2.md  day-3.md  day-5.md  day-6.md  day-8.md
lx/tests/sympolymathesy/content/journal/2020/this-week-i-learned/: 1.md  2.md  4.md  5.md  ending-for-now.md
lx/tests/sympolymathesy/content/journal/Things I Was Wrong About/: 1 Types.md
lx/tests/sympolymathesy/content/journal/rewrite/: 003.md
lx/tests/sympolymathesy/content/notes/2020/02/: 19-2021.md
lx/tests/sympolymathesy/content/notes/2020/03/: 05-1435.md  08-1034.md  08-1942.md
lx/tests/sympolymathesy/content/notes/2020/04/: 25-1607.md
lx/tests/sympolymathesy/content/notes/2020/05/: 03-1305.md  06-1428.md  10-2031.md  17-1618.md  24-1146.md
lx/tests/sympolymathesy/content/notes/2020/06/: 19-1300.md  27-1825.md
lx/tests/sympolymathesy/content/notes/2020/08/: 04-2146.md  1736.md  21-1635.md  30-1810.md
lx/tests/sympolymathesy/content/notes/2020/10/: 11-1730.md  12-1958.md  21-2016.md  26-2030.md  31-1220.md
lx/tests/sympolymathesy/content/notes/2020/11/: 24-2009.md  25-1002.md  28-1146.md
lx/tests/sympolymathesy/content/notes/2020/12/: 06-2014.md
site/: .gitignore  package.json  style.scss
site/_data/: config.lx.yaml  nav.lx.yaml
site/_ui/: base.tera  index.jinja  index.tera
site/development/: about.html  grid.css  index-2.html  index.html  jj init.md  jj-init.html  next-role.html  post.html  style.css
site/development/styles/: fonts.scss  grid.scss  index.css  index.scss  normalize.scss  reset.scss  ugh.scss
site/development/styles/components/: _index.scss  container.scss  content.scss  site-header.scss
site/development/styles/foundations/: _index.scss  breakpoints.scss  color.scss  grid.scss  scale.scss  type.scss
site/music/: index.html
site/public/: index.html  style.css
site/public/fonts/: fonts.css
sites/_shared/_styles/: _index.scss  reset.scss
sites/_shared/_ui/: head.jinja
sites/links/: index.html
sites/music/: config.lx.yaml  index.html
sites/music/_data/: config.lx.yaml
sites/music/_static/: browserconfig.xml  site.webmanifest
sites/music/_styles/: style.scss
sites/music/_ui/: base.jinja  feed.jinja  index.jinja  work.jinja
sites/music/content/: desert-2024.html  fanfare-2023.html  index.html
sites/music/static/: fanfare-2023.html  index.html  site.webmanifest
sites/music/styles/: style.scss
sites/v6/: config.lx.yaml
sites/v6/_data/: config.lx.yaml
sites/v6/_styles/: colors.scss  index.scss
sites/v6/_ui/: base.jinja  page.jinja  post.jinja
sites/v6/content/: jj init.md
sites/www/: about.html  index.html  jj-init.html  next-role.html
sites/www/styles/: style.scss
styles/: _index.scss  basics.scss  dark.scss  light.scss  normalize.scss
styles/components/: _index.scss  container.scss  content.scss  embeds.scss  gallery.scss  site-header.scss  youtube-embed.scss
styles/fonts/: commercial-type.scss
styles/foundations/: breakpoints.scss  color.scss  grid.scss  type.scss
styles/layouts/: _index.scss  home.scss  music.scss  page-title.scss  splash.scss
(+29 files in other folders)
