[workspace]
resolver = "2"
members = ["lx", "lx/crates/*"]

[workspace.package]
version = "1.0.0"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
edition = "2021"
description = "⚡️ My hyper-specialized tool for building my own website."
repository = "https://github.com/chriskrycho/v6.chriskrycho.com"
homepage = "https://github.com/chriskrycho/v6.chriskrycho.com"
documentation = "https://github.com/chriskrycho/v6.chriskrycho.com"
readme = "README.md"
license = "BlueOak-1.0.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["unicode", "cargo", "derive"] }
clap_complete = "4"
count-md = "0.1"
dirs = "5"
lazy_static = "1.4"
log = "0.4.20"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simplelog = { version = "0.12", features = ["paris"] }
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }
thiserror = "2"

[profile.dev]
split-debuginfo = "unpacked"
