[package]
name = "lx"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
# keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7.4", default-features = true, features = ["http2"] }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
glob = "0.3"
grass = "0.13.2"
json-feed = { path = "./crates/json-feed" }
lazy_static = { workspace = true }
log = { workspace = true }
lx-md = { path = "./crates/markdown" }
normalize-path = "0.2"
rayon = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
slug = "0.1"
syntect = { workspace = true }
tera = { git = "https://github.com/chriskrycho/tera.git", branch = "render_one_off" }
thiserror = { workspace = true }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "default"] }
watchexec = "3.0.1"
watchexec-signals = "2.1.0"

[dependencies.atom_syndication]
version = "0.12"
features = ["with-serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "1"
features = ["serde", "v5"]


################################################################################
#                            Workspace configuration                           #
################################################################################

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
name = "lx"
version = "1.0.0"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "⚡️ My hyper-specialized tool for building my own website."
repository = "https://github.com/chriskrycho/v6.chriskrycho.com"
homepage = "https://github.com/chriskrycho/v6.chriskrycho.com"
documentation = "https://github.com/chriskrycho/v6.chriskrycho.com"
readme = "README.md"
license = "BlueOak-1.0.0"

[workspace.dependencies]
anyhow = "1"
clap_complete = "4"
dirs = "5"
lazy_static = "1.4"
log = "0.4.20"
rayon = "1"
serde = "1.0.185"
serde_derive = "1.0.185"
serde_yaml = "0.9"
thiserror = "1"
simplelog = { version = "0.12.1", features = ["paris"] }

[workspace.dependencies.clap]
version = "4"
features = ["unicode", "cargo", "derive"]

[workspace.dependencies.syntect]
version = "5"
default-features = false
features = ["default-fancy"]

[profile.dev]
split-debuginfo = "unpacked"
