[package]
name = "lx"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
# keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
atom_syndication = { version = "0.12", features = ["with-serde"] }
axum = { version = "0.7.4", default-features = true, features = [
    "http2",
    "ws",
] }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
clap_complete = { workspace = true }
count-md = { workspace = true }
dirs = { workspace = true }
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "std",
    "async-await",
] }
glob = "0.3"
grass = "0.13.2"
json-feed = { path = "./crates/json-feed" }
lazy_static = { workspace = true }
log = { workspace = true }
lx-md = { path = "./crates/markdown" }
minijinja = { version = "2", features = ["loader", "macros"] }
normalize-path = "0.2"
notify = { version = "7", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-full = { version = "0.4", default-features = false }
rayon = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
slug = "0.1"
syntect = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "default"] }
uuid = { version = "1", features = ["serde", "v5"] }
watchexec = "3"
watchexec-signals = "2"


################################################################################
#                            Workspace configuration                           #
################################################################################

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "⚡️ My hyper-specialized tool for building my own website."
repository = "https://github.com/chriskrycho/v6.chriskrycho.com"
homepage = "https://github.com/chriskrycho/v6.chriskrycho.com"
documentation = "https://github.com/chriskrycho/v6.chriskrycho.com"
readme = "README.md"
license = "BlueOak-1.0.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["unicode", "cargo", "derive"] }
clap_complete = "4"
count-md = "0.1"
dirs = "5"
lazy_static = "1.4"
log = "0.4.20"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simplelog = { version = "0.12", features = ["paris"] }
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }
thiserror = "2"

[profile.dev]
split-debuginfo = "unpacked"
