[package]
name = "lx"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
# keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
atom_syndication = { version = "0.12", features = ["with-serde"] }
axum = { version = "0.7.4", default-features = true, features = [
    "http2",
    "ws",
] }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true }
clap_complete = { workspace = true }
count-md = { workspace = true }
dirs = { workspace = true }
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "std",
    "async-await",
] }
glob = "0.3"
grass = "0.13.2"
json-feed = { path = "./crates/json-feed" }
lazy_static = { workspace = true }
log = { workspace = true }
lx-md = { path = "./crates/markdown" }
minijinja = { version = "2", features = ["loader", "macros"] }
normalize-path = "0.2"
notify = { version = "7", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-full = { version = "0.4", default-features = false }
rayon = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
slug = "0.1"
syntect = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "default"] }
uuid = { version = "1", features = ["serde", "v5"] }
watchexec = "3"
watchexec-signals = "2"
