[package]
name = "lx-md"

authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
# keywords.workspace = true

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
syntect = { workspace = true }
thiserror = { workspace = true }

[dependencies.pulldown-cmark]
git = "https://github.com/raphlinus/pulldown-cmark.git"
default-features = false
features = ["simd", "html"]

[[bin]]
name = "lx-md"
path = "bin/lx-md.rs"
