[package]
name = "lx-md"

authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
# keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
latex2mathml = "0.2"
lazy_static = { workspace = true }
pulldown-cmark = { version = "0.11", default-features = false, features = [
    "simd",
    "html",
] }
simplelog = { workspace = true }
syntect = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
